// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package permissionrpc;

// 生成 golang 代码后的包名
option go_package = "./permissionrpc";

message EmptyReq {
}

message EmptyResp {
}

message IdReq {
  int64 id = 1;
}
message IdsReq {
  repeated int64 ids = 1;
}

message BatchResp {
  int64 success_count = 1;
}

message CountResp {
  int64 count = 1;
}

message UserIdReq {
  int64 user_id = 1;
}

/************** rbac 权限相关 **************/
message ApiNew {
  int64 id = 1;// 主键id
  string name = 2;// api名称
  string path = 3;// api路径
  string method = 4;// api请求方法
  int64 parent_id = 5;// 分组id
  int64 traceable = 6;// 是否追溯操作记录 0需要，1是
  int64 status = 7;// 状态 1开，2关
}

message ApiDetails {
  int64 id = 1;// 主键id
  string name = 2;// api名称
  string path = 3;// api路径
  string method = 4;// api请求方法
  int64 parent_id = 5;// 分组id
  int64 traceable = 6;// 是否追溯操作记录 0需要，1是
  int64 status = 7;// 状态 1开，2关
  int64 created_at = 8;// 创建时间
  int64 updated_at = 9;// 更新时间
  repeated ApiDetails children = 10;
}

message FindApiListResp {
  repeated ApiDetails list = 1;
}

message MenuNew {
  int64 id = 1;// 主键
  int64 parent_id = 2;// 父id
  string title = 3;// 菜单标题
  string path = 4;// 路由路径
  string name = 5;// 路由名称
  string component = 6;// 路由组件
  string redirect = 7;// 路由重定向
  int64 type = 8;// 菜单类型
  string extra = 9;// 菜单元数据
//  int64 created_at = 10;// 创建时间
//  int64 updated_at = 11;// 更新时间
}

message MenuDetails {
  int64 id = 1;// 主键
  int64 parent_id = 2;// 父id
  string title = 3;// 菜单标题
  int64 type = 4;// 菜单类型（0代表菜单、1代表iframe、2代表外链、3代表按钮）
  string path = 5;// 路由地址
  string name = 6;// 路由名字
  string component = 7;// Layout组件
  string redirect = 8;// 路由重定向
  string extra = 9;// 额外的配置信息
  int64 created_at = 10;// 创建时间
  int64 updated_at = 11;// 更新时间
  repeated MenuDetails children = 12;
}

message FindMenuListResp {
  repeated MenuDetails list = 1;
}

message SyncMenuReq {
  repeated MenuDetails menus = 1;
}


message RoleNew {
  int64 id = 1;// 主键id
  int64 parent_id = 2;// 父角色id
  string role_domain = 3;// 角色域
  string role_name = 4;// 角色名
  string role_comment = 5;// 角色备注
  int64 is_disable = 6;// 是否禁用  0否 1是
  int64 is_default = 7;// 是否默认角色 0否 1是
//  int64 created_at = 8;// 创建时间
//  int64 updated_at = 9;// 更新时间
}

message RoleDetails {
  int64 id = 1;// 主键id
  int64 parent_id = 2;// 父角色id
  string role_domain = 3;// 角色域
  string role_name = 4;// 角色名
  string role_comment = 5;// 角色备注
  int64 is_disable = 6;// 是否禁用  0否 1是
  int64 is_default = 7;// 是否默认角色 0否 1是
  int64 created_at = 8;// 创建时间
  int64 updated_at = 9;// 更新时间
  repeated RoleDetails children = 10;
}

message FindRoleListResp {
  repeated RoleDetails list = 1;
  int64 total = 2;
}

message RoleResourcesResp {
  int64 role_id = 1;
  repeated int64 api_ids = 2;
  repeated int64 menu_ids = 3;
}

message UpdateRoleApisReq {
  int64 role_id = 1;
  repeated int64 api_ids = 2;
}

message UpdateRoleMenusReq {
  int64 role_id = 1;
  repeated int64 menu_ids = 2;
}

message UpdateUserRoleReq {
  int64 user_id = 1; // 用户id
  repeated int64 role_ids = 2;
}

message FindApiListReq {
  int64 page = 1;
  int64 page_size = 2;
}

message FindMenuListReq {
  int64 page = 1;
  int64 page_size = 2;
}

message FindRoleListReq {
  int64 page = 1;
  int64 page_size = 2;
}

service PermissionRpc {
  // 创建接口
  rpc AddApi(ApiNew) returns(ApiDetails);
  // 更新接口
  rpc UpdateApi(ApiNew) returns(ApiDetails);
  // 删除接口
  rpc DeleteApi(IdsReq) returns(BatchResp);
  // 查询接口列表
  rpc FindApiList(FindApiListReq) returns(FindApiListResp);
  // 同步接口列表
  rpc SyncApiList(EmptyReq) returns(BatchResp);
  // 清空接口列表
  rpc CleanApiList(EmptyReq) returns(BatchResp);


  // 创建菜单
  rpc AddMenu(MenuNew) returns(MenuDetails);
  // 更新菜单
  rpc UpdateMenu(MenuNew) returns(MenuDetails);
  // 删除菜单
  rpc DeleteMenu(IdsReq) returns(BatchResp);
  // 查询菜单列表
  rpc FindMenuList(FindMenuListReq) returns(FindMenuListResp);
  // 同步菜单列表
  rpc SyncMenuList(SyncMenuReq) returns(BatchResp);
  // 清空菜单列表
  rpc CleanMenuList(EmptyReq) returns(BatchResp);


  // 创建角色
  rpc AddRole(RoleNew) returns(RoleDetails);
  // 更新角色
  rpc UpdateRole(RoleNew) returns(RoleDetails);
  // 删除角色
  rpc DeleteRole(IdsReq) returns(BatchResp);
  // 查询角色列表
  rpc FindRoleList(FindRoleListReq) returns(FindRoleListResp);

  // 更新角色菜单
  rpc UpdateRoleMenus(UpdateRoleMenusReq) returns(EmptyResp);
  // 更新角色资源
  rpc UpdateRoleApis(UpdateRoleApisReq) returns(EmptyResp);
  // 查询角色资源权限
  rpc FindRoleResources(IdReq) returns(RoleResourcesResp);

  // 修改用户角色
  rpc UpdateUserRole(UpdateUserRoleReq) returns(EmptyResp);
  // 获取用户接口权限
  rpc FindUserApis(UserIdReq) returns(FindApiListResp);
  // 获取用户菜单权限
  rpc FindUserMenus(UserIdReq) returns(FindMenuListResp);
  // 获取用户角色信息
  rpc FindUserRoles(UserIdReq) returns(FindRoleListResp);
}
